migrate blog post :smiley:

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+languageCode = "fr"
+title = "Sogilis blog Site"
 theme = "hamburg"
 enableEmoji = true
 debug = true
