--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ yarn-error.log
 
 # You can download manually Hugo binaries here
 bin/
+
+# Generated resources (like css from scss)
+site/resources/_gen
