twitter and linkedin

--- a/site/config.toml
+++ b/site/config.toml
@@ -8,10 +8,16 @@ debug = true
 [params]
   disqus = "trololu"
 
-[blackfriday]
-  taskLists = true
-  smartypants = true
-  angledQuotes = true
-  fencedCode = true
-  extensions = ["tables"]
-  plainIDAnchors = true
+[languages.en]
+  languageName = "English"
+
+  [languages.en.params]
+    twitter = "https://twitter.com/Sogilis?lang=en"
+    linkedin = "https://www.linkedin.com/company/sogilis/"
+
+[languages.fr]
+  languageName = "Français"
+
+  [languages.fr.params]
+    twitter = "https://twitter.com/Sogilis?lang=fr"
+    linkedin = "https://www.linkedin.com/company/sogilis/"
