--- a/site/config.toml
+++ b/site/config.toml
@@ -17,6 +17,8 @@ paginate = 999
   [languages.en.params]
     twitter = "https://twitter.com/Sogilis?lang=en"
     linkedin = "https://www.linkedin.com/company/sogilis/"
+    dateFormat = "January 2 2006"
+
 
 [languages.fr]
   languageName = "Français"
@@ -24,3 +26,4 @@ paginate = 999
   [languages.fr.params]
     twitter = "https://twitter.com/Sogilis?lang=fr"
     linkedin = "https://www.linkedin.com/company/sogilis/"
+    dateFormat = "2 January 2006"
