--- a/site/config.toml
+++ b/site/config.toml
@@ -12,6 +12,7 @@ paginate = 999
   disqus = "trololu"
 
 [languages.en]
+  baseURL = "https://blog.sogilis.com"
   languageName = "English"
 
   [languages.en.params]
@@ -19,6 +20,7 @@ paginate = 999
     linkedin = "https://www.linkedin.com/company/sogilis/"
 
 [languages.fr]
+  baseURL = "https://blog.sogilis.fr"
   languageName = "Français"
 
   [languages.fr.params]
