feature: enable comments

--- a/site/config.toml
+++ b/site/config.toml
@@ -7,9 +7,7 @@ theme = "sogilis"
 enableEmoji = true
 debug = true
 paginate = 999
-
-[params]
-  disqus = "trololu"
+disqusShortname = "sogilisblog"
 
 [languages.en]
   languageName = "English"
