Display publish date (#45)
* Add published date fr and en format

--- a/site/config.toml
+++ b/site/config.toml
@@ -17,6 +17,8 @@ paginate = 999
   [languages.en.params]
     twitter = "https://twitter.com/Sogilis?lang=en"
     linkedin = "https://www.linkedin.com/company/sogilis/"
+    dateFormat = "January 2 2006"
+
 
 [languages.fr]
   languageName = "Français"
