--- a/site/config.toml
+++ b/site/config.toml
@@ -12,6 +12,7 @@ paginate = 999
   disqus = "trololu"
 
 [languages.en]
+  baseURL = "https://blog.sogilis.com"
   languageName = "English"
 
   [languages.en.params]
@@ -21,6 +22,7 @@ paginate = 999
 
 
 [languages.fr]
+  baseURL = "https://blog.sogilis.fr"
   languageName = "Français"
 
   [languages.fr.params]
