Add description medatadata

--- a/site/config.toml
+++ b/site/config.toml
@@ -8,6 +8,9 @@ debug = true
 paginate = 999
 disqusShortname = "sogilisblog"
 
+[params]
+  siteDescription = "Série d'articles écrits par les membres de Sogilis décrivants la vie en entreprise ou des sujets techniques précis"
+
 [languages.fr]
   languageName = "Français"
 
