--- a/site/config.toml
+++ b/site/config.toml
@@ -7,6 +7,7 @@ enableEmoji = true
 debug = true
 paginate = 999
 disqusShortname = "sogilisblog"
+enableRobotsTXT = true
 
 [params]
   siteDescription = "Série d'articles écrits par les membres de Sogilis décrivants la vie en entreprise ou des sujets techniques précis"
