--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
+[build.environment]
+  YARN_VERSION = "1.12.1"
+  NPM_VERSION = "6.4.1"
+  HUGO_VERSION = "0.55.6"
+
 [build]
   command = "yarn build"
   publish = "dist"
-[build.environment]
-  YARN_VERSION = "1.9.4"
-  HUGO_VERSION = "0.59.1"   # Warning: should match Dockerfile
 
 [context.deploy-preview]
-  command = "yarn build-preview"
+  command = "yarn build:preview"
