Revert "Update one-click-hugo-cms + doc"
This reverts commit ef830c4540048cbb0afea567b34116d7411070ee.

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,10 +3,25 @@ env:
 
 parser: babel-eslint
 
-parserOptions:
-  ecmaVersion: 6
-
 plugins: [ "import" ]
+
+# enable ECMAScript features
+ecmaFeatures:
+  arrowFunctions: true
+  binaryLiterals: true
+  blockBindings: true
+  classes: true
+  defaultParams: true
+  destructuring: true
+  forOf: true
+  generators: true
+  jsx: true
+  modules: true
+  objectLiteralShorthandMethods: true
+  objectLiteralShorthandProperties: true
+  octalLiterals: true
+  spread: true
+  templateStrings: true
 
 rules:
   # Possible Errors
