--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
+  "presets": ["es2015", "react"],
   "plugins": [
-    "@babel/plugin-syntax-object-rest-spread",
-    "@babel/plugin-proposal-object-rest-spread"
+    "syntax-object-rest-spread",
+    "transform-object-rest-spread"
   ]
 }
