--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -15,3 +15,17 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+
+# Working with a Local Git Repository
+# ==============================================================================
+# Beta Features
+# added in netlify-cms@2.10.17 / netlify-cms-app@2.11.14 (02/2020)
+# Use these features at your own risk.
+# https://www.netlifycms.org/docs/beta-features/#working-with-a-local-git-repository
+
+# when using the default proxy server port
+local_backend: true
+
+# when using a custom proxy server port
+# local_backend:
+#   url: http://localhost:8081/api/v1
