--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "netlify-cms-proxy-server": "^1.0.7"
   },
   "dependencies": {
