--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,9 @@
 # Only yarn is advise.
 /package-lock.json
 
-site/static/admin/netlify-cms.js
-site/static/admin/netlify-cms.js.map
+# External dependencies copied from ./node_modules that we won't have in our
+# repo Git
+/site/themes/sogilis/assets/css/reboot.min.css
+/site/themes/sogilis/assets/css/reboot.min.css.map
+/site/static/admin/netlify-cms.js
+/site/static/admin/netlify-cms.js.map
