--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "start": "make start",
     "start:netlify": "make start_netlify",
     "build": "make build",
-    "build:preview": "make build_preview"
+    "build:preview": "make build_preview",
+    "prettier:format": "prettier --write \"{,site/**/}*.{json,ts,css,scss,yml}\"",
+    "prettier:check": "prettier --check \"{,site/**/}*.{json,ts,css,scss,yml}\"",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "yarn lint -- --fix"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.0.0",
-    "netlify-cms-proxy-server": "^1.2.6"
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "netlify-cms-proxy-server": "^1.2.6",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "bootstrap-reboot": "^4.4.1",
@@ -24,5 +32,10 @@
   },
   "hugo-bin": {
     "buildTags": "extended"
+  },
+  "husky": {
+      "hooks": {
+          "pre-commit": "yarn prettier:format"
+      }
   }
 }
