--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,20 +1,20 @@
 backend:
   name: git-gateway
 publish_mode: editorial_workflow
-media_folder: "site/static/img" # Folder where user uploaded files should go
-public_folder: "/img" # The src attribute for uploaded media will begin with this
+media_folder: 'site/static/img' # Folder where user uploaded files should go
+public_folder: '/img' # The src attribute for uploaded media will begin with this
 
 collections: # A list of collections the CMS should be able to edit
-  - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Post" # Used in the UI, ie.: "New Post"
-    folder: "site/content/posts" # The path to the folder where the documents are stored
+  - name: 'post' # Used in routes, ie.: /admin/collections/:slug/edit
+    label: 'Post' # Used in the UI, ie.: "New Post"
+    folder: 'site/content/posts' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Intro Blurb", name: "description", widget: "text"}
-      - {label: "Image", name: "image", widget: "image", required: false}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Intro Blurb', name: 'description', widget: 'text' }
+      - { label: 'Image', name: 'image', widget: 'image', required: false }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
 
 # Working with a Local Git Repository
 # ==============================================================================
@@ -25,7 +25,6 @@ collections: # A list of collections the CMS should be able to edit
 
 # when using the default proxy server port
 local_backend: true
-
 # when using a custom proxy server port
 # local_backend:
 #   url: http://localhost:8081/api/v1
