--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "sogilis-blog",
   "version": "1.0.0",
-  "description": "Sogilis blog",
-  "repository": "sogilis/Blog",
+  "description": "Sogilis SAS's blog",
+  "author": "Sogilis SAS",
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sogilis/Blog.git"
+  },
   "scripts": {
     "start": "make start",
     "start:netlify": "make start_netlify",
@@ -13,8 +18,6 @@
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "yarn lint -- --fix"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
