feature: add search

--- a/site/config.toml
+++ b/site/config.toml
@@ -18,3 +18,6 @@ enableRobotsTXT = true
   [languages.fr.params]
     twitter = "https://twitter.com/Sogilis?lang=fr"
     linkedin = "https://www.linkedin.com/company/sogilis/"
+
+[outputs]
+    section = ["json"]
