--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_USERNAME: Blog
-          SLACK_ICON_EMOJI: ":bomb:"
+          SLACK_ICON_EMOJI: ":warning:"
           SLACK_COLOR: "#A30101"
           SLACK_TITLE: Dead link checker
           SLACK_MESSAGE: Blog contains dead link(s) :boom:. Please fix this quickly to prevent SEO degradation.
