--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "make build",
     "build:preview": "make build_preview",
     "prettier:format": "prettier --write \"{,site/**/}*.{json,ts,css,scss,yml}\"",
-    "prettier:check": "prettier --check \"{,site/**/}*.{json,ts,css,scss,yml}\"",
+    "prettier:check": "prettier --check \"{,site/**/}*.{ts,css,scss,yml}\"",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "yarn lint -- --fix"
   },
