Set eslint max line to 400 instead of default 300

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -45,6 +45,10 @@ rules:
     - error
     - max: 60
 
+  max-lines:
+    - error
+    - max: 400
+
   lines-around-comment: off
 
   no-ternary: off
