--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -13,6 +13,12 @@ collections: # A list of collections the CMS should be able to edit
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Intro Blurb', name: 'description', widget: 'text' }
+      - {
+          label: 'Image Alt',
+          name: 'altimage',
+          widget: 'string',
+          required: false,
+        }
       - { label: 'Image', name: 'image', widget: 'image', required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
 
