--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@
 /site/themes/sogilis/static/css/typeface-montserrat/
 /site/static/admin/netlify-cms.js
 /site/static/admin/netlify-cms.js.map
+
+# VS Code editor
+.vscode
