fix indentattion config for markdown files
Default indentation is 2 spaces.
But 2 spaces in code block in articles is too small for lisibility.

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,6 @@ insert_final_newline = true
 # Change these settings to your own preference
 indent_style = space
 indent_size = 2
+
+[*.md]
+indent_size = 4
