copy-text-to-clipboard@3.0.0 needs Node.js >= 12

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/sogilis/Blog.git"
   },
+  "engines" : {
+    "node" : ">=12"
+  },
   "scripts": {
     "start": "make start",
     "start:netlify": "make start_netlify",
