bug: use VuePress 1 and not VuePress latest at it was defined into package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vuepress build examples"
   },
   "devDependencies": {
-    "@vuepress/plugin-blog": "latest",
-    "vuepress": "next"
+    "@vuepress/plugin-blog": "^1.9.4",
+    "vuepress": "^1.8.0"
   }
 }
