--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
   "name": "70-lines-of-vuepress-blog-theme",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/ulivz/40-lines-of-vuepress-blog-theme.git",
-  "author": "ULIVZ <chl814@foxmail.com>",
+  "private": "true",
   "license": "MIT",
+  "main": "./theme/index.js",
   "scripts": {
+    "build": "yarn clean && vuepress build docs",
     "clean": "rm -rf docs/.vuepress/.temp docs/.vuepress/.cache docs/.vuepress/dist",
     "dev": "vuepress dev docs",
-    "build": "yarn clean && vuepress build docs",
-    "serve": "yarn build && anywhere -h localhost -d docs/.vuepress/dist",
     "lint": "export NODE_OPTIONS=\"--max-old-space-size=4096\" && eslint --ext .js,.ts,.vue .",
     "lint:fix": "yarn lint --fix",
     "prettier": "prettier . --check --ignore-unknown",
     "prettier:fix": "prettier . --write --ignore-unknown",
+    "serve": "yarn build && anywhere -h localhost -d docs/.vuepress/dist",
     "test": "yarn prettier && yarn lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test && yarn sort-package-json"
+    }
   },
   "devDependencies": {
     "@vuepress/plugin-blog": "^1.9.4",
-    "vuepress": "^1.8.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-vuepress": "^3.1.0",
     "eslint-config-vuepress-typescript": "^2.1.2",
     "eslint-plugin-import": "^2.22.1",
+    "husky": "^4.3.8",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.48.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vuepress": "^1.8.0"
   }
 }
