--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prettier": "^2.2.1",
     "sort-package-json": "^1.48.1",
     "typescript": "^4.1.3",
-    "vuepress": "^1.8.0"
+    "vuepress": "^1.8.0",
+    "vuepress-plugin-typescript": "^0.3.1",
+    "vuepress-types": "^0.9.4"
   }
 }
