--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmit": false,
-    "allowJs": false,
+    "allowJs": true,
     "noEmitOnError": false,
     "noImplicitAny": true,
     "resolveJsonModule": true,
