--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-vuepress-typescript": "^2.1.2",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.8",
+    "markdown-it-footnote": "^3.0.2",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.48.1",
     "typescript": "^4.1.3",
