--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 // See example at https://github.com/salazarr-js/vuepress-ts
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
     "noImplicitAny": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
     "strict": true,
     "strictNullChecks": true
   },
@@ -18,6 +15,7 @@
     "./theme/**/*.ts",
     "./theme/**/*.ts",
     "./theme/**/*.vue"
-  ],
-  "exclude": ["node_modules"]
+  ]
+  // https://github.com/vuepress/vuepress-community/issues/51
+  // "exclude": ["node_modules"]
 }
