--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sort-package-json": "^1.48.1",
     "typescript": "^4.1.3",
     "vuepress": "^1.8.0",
+    "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-typescript": "^0.3.1",
     "vuepress-types": "^0.9.4"
   }
