--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "70-lines-of-vuepress-blog-theme",
+  "name": "vuepress-1-poc",
   "version": "1.0.0",
   "private": "true",
   "license": "MIT",
-  "main": "./docs/.vuepress/config.js",
+  "main": "./blog/.vuepress/config.js",
   "scripts": {
-    "build": "yarn clean && vuepress build docs",
-    "clean": "rm -rf docs/.vuepress/.temp docs/.vuepress/.cache docs/.vuepress/dist",
-    "dev": "vuepress dev docs --no-clear-screen",
+    "build": "yarn clean && vuepress build blog",
+    "clean": "rm -rf blog/.vuepress/.temp blog/.vuepress/.cache blog/.vuepress/dist",
+    "dev": "vuepress dev blog --no-clear-screen",
     "lint": "export NODE_OPTIONS=\"--max-old-space-size=4096\" && eslint --ext .js,.ts,.vue .",
     "lint:fix": "yarn lint --fix",
     "prettier": "prettier . --check --ignore-unknown",
     "prettier:fix": "prettier . --write --ignore-unknown",
-    "serve": "yarn build && anywhere -h localhost -d docs/.vuepress/dist",
+    "serve": "yarn build && anywhere -h localhost -d blog/.vuepress/dist",
     "test": "yarn prettier && yarn lint"
   },
   "husky": {
