bug: correct tsconfig.json file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2018"
+    "target": "ES2018",
+    "moduleResolution": "node"
   },
   "include": [
     "./docs/.vuepress/**/*.ts",
