--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@vuepress/plugin-blog": "^1.9.4",
     "anywhere": "^1.5.0",
+    "bootstrap-reboot": "^4.5.4",
+    "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-vuepress": "^3.1.0",
@@ -30,9 +32,13 @@
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.8",
     "markdown-it-footnote": "^3.0.2",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^10.0.0",
     "sort-package-json": "^1.48.1",
-    "typescript": "^4.1.3",
+    "typeface-eb-garamond": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
+    "typescript": "^4.1.5",
     "vuepress": "^1.8.0",
     "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-typescript": "^0.3.1",
