feat: use `<ClientOnly>` code. Seems to be buggy with TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES2018",
+    "module": "ES2020",
     "moduleResolution": "node"
   },
   "include": ["./theme/**/*.ts", "./theme/**/*.vue"],
