feat: import script for Navigation Menu from script.js https://github.com/sogilis/Blog/blob/07501c502d59e632a6dd429a16026401f99da931/site/themes/sogilis/static/js/scripts.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 // See also https://vuejs.org/v2/guide/typescript.html
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
+    "lib": ["DOM", "ES2020", "dom.iterable"],
     "noImplicitAny": false,
     "noImplicitThis": true,
     "sourceMap": true,
