--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "yarn clean && vuepress build blog",
     "clean": "rm -rf blog/.vuepress/.temp blog/.vuepress/.cache blog/.vuepress/dist",
     "dev": "vuepress dev blog --no-clear-screen",
+    "postinstall": "husky install",
     "lint": "export NODE_OPTIONS=\"--max-old-space-size=4096\" && eslint --ext .js,.ts,.vue .",
     "lint:fix": "yarn lint --fix",
     "prettier": "prettier . --check --ignore-unknown",
@@ -15,22 +16,18 @@
     "serve": "yarn build && anywhere -h localhost -d blog/.vuepress/dist",
     "test": "yarn prettier && yarn lint"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn test && yarn sort-package-json"
-    }
-  },
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.8.1",
     "@vuepress/plugin-blog": "^1.9.4",
     "anywhere": "^1.5.0",
     "bootstrap-reboot": "^4.5.4",
     "css-modules-typescript-loader": "^4.0.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-vuepress": "^3.1.0",
     "eslint-config-vuepress-typescript": "^2.1.2",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "markdown-it-footnote": "^3.0.2",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
@@ -39,7 +36,8 @@
     "typeface-eb-garamond": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
     "typescript": "^4.1.5",
-    "vuepress": "^1.8.0",
+    "vuepress": "^1.8.1",
+    "vuepress-plugin-medium-zoom": "^1.1.9",
     "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-typescript": "^0.3.1",
     "vuepress-types": "^0.9.4"
