--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.8.1",
     "@vuepress/plugin-blog": "^1.9.4",
+    "@vuepress/plugin-search": "^1.8.1",
     "anywhere": "^1.5.0",
     "bootstrap-reboot": "^4.5.4",
     "css-modules-typescript-loader": "^4.0.1",
