--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vuepress-1-poc",
   "version": "1.0.0",
   "private": "true",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "main": "./blog/.vuepress/config.js",
   "scripts": {
     "build": "yarn clean && vuepress build blog",
