--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.1.5",
     "vuepress": "^1.8.1",
     "vuepress-plugin-medium-zoom": "^1.1.9",
+    "vuepress-plugin-reading-progress": "^1.0.10",
     "vuepress-plugin-reading-time": "^0.1.1",
     "vuepress-plugin-typescript": "^0.3.1",
     "vuepress-types": "^0.9.4"
