--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "module": "ES2020",
     "moduleResolution": "node"
   },
-  "include": ["./theme/**/*.ts", "./theme/**/*.vue"],
+  "include": [
+    "./blog/.vuepress/components/**/*.ts",
+    "./blog/.vuepress/components/**/*.vue",
+    "./theme/**/*.ts",
+    "./theme/**/*.vue"
+  ],
   "exclude": ["node_modules"]
 }
