--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -28,8 +28,8 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_USERNAME: Blog
-          SLACK_ICON_EMOJI: ":warning:"
-          SLACK_COLOR: "#A30101"
+          SLACK_ICON_EMOJI: ':warning:'
+          SLACK_COLOR: '#A30101'
           SLACK_TITLE: Dead link checker
           SLACK_MESSAGE: Blog contains dead link(s) :boom:. Please fix this quickly to prevent SEO degradation.
           SLACK_FOOTER: Scheduled job executed by Github Actions
