feat: correct link from sogilis.fr to sogilis.com `$ find -path './node_modules' -prune -o -path './.git' -prune -o -type f -exec sed -i 's/sogilis.fr/sogilis.com/' {} +`

--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -20,7 +20,7 @@ jobs:
         id: check
         uses: victoriadrake/link-snitch@master
         env:
-          URL: https://blog.sogilis.fr
+          URL: https://blog.sogilis.com
           CONFIG: hydra-link-checker.json
 
       - name: Send Slack notification
