--- a/site/themes/sogilis/theme.toml
+++ b/site/themes/sogilis/theme.toml
@@ -1,4 +1,4 @@
-# Theme to use with Sogilis website in 2020 (blog.sogilis.fr)
+# Theme to use with Sogilis website in 2020 (blog.sogilis.com)
 
 name = "Sogilis"
 license = "MIT"
